<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/backgroundCircle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/circle_outer"
                android:text="" />

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:background="@drawable/circle_inner"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/icon_user" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/addFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/border_login"
                android:hint="@string/createFirstNHint"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLength="10"
                android:paddingLeft="30dp"
                android:paddingTop="12dp"
                android:paddingRight="30dp"
                android:paddingBottom="12dp"
                android:textColor="@color/fontGrey"
                android:textColorHint="#546e7a" />

            <EditText
                android:id="@+id/addLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/border_login"
                android:hint="@string/createLastNHint"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLength="15"
                android:paddingLeft="30dp"
                android:paddingTop="12dp"
                android:paddingRight="30dp"
                android:paddingBottom="12dp"
                android:textColor="@color/fontGrey"
                android:textColorHint="#546e7a" />

        </LinearLayout>


        <EditText
            android:id="@+id/addEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_login"
            android:hint="@string/createEmailHint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="35"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/fontGrey"
            android:textColorHint="#546e7a" />

        <EditText
            android:id="@+id/addPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_login"
            android:hint="@string/createPasswordHint"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="10"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/fontGrey"
            android:textColorHint="#546e7a"

            />

        <EditText
            android:id="@+id/addPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_login"
            android:hint="@string/createPhoneHint"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="12"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/fontGrey"
            android:textColorHint="#546e7a" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maleRadio"
                android:textColor="@color/fontLight"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femaleRadio"
                android:textColor="@color/fontLight"
                android:textStyle="bold" />
        </RadioGroup>


        <Button
            android:id="@+id/submitAccountCreation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_action"
            android:onClick="onClick"
            android:text="@string/createButton"
            android:textAllCaps="false"
            android:textColor="@color/fontLight"
            android:textSize="20sp"
            android:visibility="visible" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agreeTOS"
        android:textColor="@color/fontLight"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</android.support.constraint.ConstraintLayout>